--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,14 @@ header .navbar-light .navbar-nav .nav-link {
     /* padding-top: 400px; */
     background-size: cover;
 }
+
+/* sezione neew releases */
+#new-releases{
+    background-color: #1f1f1f;
+    color: #fff;
+}
+#new-releases img{
+    width: 100%;
+    border-radius: 10px;
+    padding-bottom: 15px;
+}
