--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@ header {
 }
 #sony{
     background-color: #000;
-    color: #fff;
     text-align: end;
-    font-size: 1.2rem;
-    padding: 1.2rem;
-    letter-spacing: .3rem;
+    padding: .4rem;
     line-height: 0;
+}
+#sony img{
+    height: 1.2rem;
 }
 header .navbar {
     padding-top: 0rem;
