--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,8 @@ header .navbar-light .navbar-nav .nav-link:hover {
 
 /* effetti hover della sez jumbo */
 .ms_btn-red:hover {
-    border: 2px solid #dd4d21;
-    box-shadow: inset 0px 0px 0px 2px #dd4d21;
+    border: 2px solid #000;
+    box-shadow: 0px 0px 0px 2px #dd4d21;
 }
 
 #jumbotron div:nth-child(2) img:hover{
@@ -133,8 +133,8 @@ header .navbar-light .navbar-nav .nav-link:hover {
     border-color: #2d64e6;
 }
 .ms_btn-blue:hover{
-    border: 2px solid #718ed1;
-    box-shadow: inset 0px 0px 0px 2px #718ed1;
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 0px 2px #2d64e6;
 }
 .ms_sez-white img{
     width: 100%;
