--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ a{
 
 /* header */
 header {    
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 #sony{
     background-color: #000;
@@ -26,7 +26,7 @@ header .navbar {
     padding-bottom: 0rem;
     line-height: 2.5rem;
     background-color: #fff;
-    /* modifica per dropdown menu */
+    /* modifica per dropdown menu - position relative spostato qui e non al ul così da dare poi schermo 100%*/
     position: relative;
 }
 header nav .container-fluid div:last-child{
@@ -40,16 +40,6 @@ header .navbar-light .navbar-nav .nav-link {
 }
 .navbar-light .navbar-nav .nav-link.active{
     color: rgba(0,0,0,.5);
-}
-
-@media all and (max-width:992px) {
-    #accedi{
-        width: 50%;
-        text-align: center;
-    }
-    #search{
-        border: #999 1px solid;
-    }
 }
 
 /* modifiche css BS dropdown menu */
@@ -76,6 +66,19 @@ div.dropdown-menu li{
     background-color: #2d64e6;
     margin-right: .5rem;
 }
+/* modifiche layout hamburger menu quando viene visualizzato*/
+@media all and (max-width:992px) {
+    #accedi{
+        width: 50%;
+        text-align: center;
+    }
+    #search{
+        border: #999 1px solid;
+    }
+    [class^="nav-item"]>#search {
+        margin-bottom: 2rem;
+    }
+}
 
 
 
@@ -83,17 +86,12 @@ div.dropdown-menu li{
 .ms_btn{
     border-radius: 1.25rem;
     display: inline-block;
-    font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.3;
     color: #212529;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: middle;
     cursor: pointer;
     background-color: transparent;
     border: 2px solid transparent;
     padding: .375rem .75rem;
-    font-size: 1rem;
 }
 .ms_btn-dark {
     color: #fff;
@@ -115,12 +113,12 @@ header .navbar-light .navbar-nav .nav-link:hover {
     background-image: url(../img/jumbo-bg.png);
     background-position: center;
     background-repeat: no-repeat;
-    /* padding-top: 400px; */
     background-size: cover;
 }
 #jumbotron, #adventure{  
     color: #fff;
 }
+
 #jumbotron{  
     padding-top: 98.4px;
 }
@@ -159,8 +157,6 @@ header .navbar-light .navbar-nav .nav-link:hover {
     box-shadow: inset 0px 0px 0px 2px #000;
 }
 
-
-
 #jumbotron div:nth-child(2) img:hover{
     margin-top: 0;
 }
@@ -169,7 +165,7 @@ header .navbar-light .navbar-nav .nav-link:hover {
     border-color: #2d64e6;
 }
 
-/* presentation e explore e sales e social*/
+/* sezioni: presentation explore sales e social*/
 .ms_sez-white h2{
     padding-bottom: 1rem;
 }
@@ -187,6 +183,9 @@ header .navbar-light .navbar-nav .nav-link:hover {
 }
 .ms_sez-white img{
     width: 100%;
+}
+.ms_reg{
+    font-size: 1rem;
 }
 
 /* effetti hover e select della sezione presentation */
@@ -226,7 +225,6 @@ header .navbar-light .navbar-nav .nav-link:hover {
     background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    /* padding-top: 400px; */
     background-size: cover;
 }
 
@@ -251,12 +249,14 @@ header .navbar-light .navbar-nav .nav-link:hover {
     background-color: #161c3b;
     color: #fff;
 }
-.ms_sez-ps{
-    padding: 2rem 0;
+.ms_sez-ps p{
+    margin-top: 1rem;
 }
-.ms_sez-ps img{
+.ms_sez-ps img:first-child{
+    width: 70%;
+}
+.ms_sez-ps img:last-child{
     width: 100%;
-    padding-bottom: 2rem;
 }
 .ms_btn-grey{
     background-color: #d9dadc;
@@ -275,11 +275,12 @@ header .navbar-light .navbar-nav .nav-link:hover {
     border: 2px solid #f5f5f5;
     box-shadow: inset 0px 0px 0px 2px #161c3b;
 }
+
 /* footer */
 footer{
     background-color: #07439c;
     color: #fff;
-    padding: 4rem 0;
+    padding: 3rem 0;
 }
 footer>.container>.row>.col-12.col-lg-6>img:first-child{
     margin-bottom: 2rem;
@@ -305,4 +306,5 @@ footer .container div:last-child div p>a{
 footer a:hover{
     text-decoration: none;
     color: rgb(223, 223, 223);
+    text-decoration: underline;
 }
